--- a/app.json
+++ b/app.json
@@ -4,9 +4,9 @@
     "slug": "UniversityApp",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/appIcon.png",
+    "icon": "./assets/TheBeaconIcon.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splash-2.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
