--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.4",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.9",
     "@react-navigation/drawer": "^5.12.5",
@@ -15,19 +16,23 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "~40.0.0",
+    "expo-barcode-scanner": "~9.1.0",
+    "expo-linking": "~2.0.1",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
+    "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.7.2",
+    "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
     "react-native-screens": "~2.15.2",
+    "react-native-svg": "^12.1.1",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12",
-    "expo-linking": "~2.0.1"
+    "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
