--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
-    "expo": "~40.0.0",
+    "expo": "^41.0.1",
     "expo-barcode-scanner": "~9.1.0",
     "expo-linking": "~2.0.1",
     "expo-status-bar": "~1.0.3",
@@ -31,10 +31,12 @@
     "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
-    "react-native-screens": "~2.15.2",
+    "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^8.1.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "expo-linear-gradient": "~9.1.0",
+    "expo-splash-screen": "~0.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
