--- a/package.json
+++ b/package.json
@@ -12,31 +12,31 @@
     "@react-native-community/cameraroll": "^4.0.4",
     "@react-native-community/hooks": "^2.6.0",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-navigation/bottom-tabs": "^5.11.9",
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/material-bottom-tabs": "^5.3.15",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "expo": "^41.0.1",
-    "expo-barcode-scanner": "~9.1.0",
-    "expo-linking": "~2.0.1",
+    "expo-barcode-scanner": "~10.1.2",
+    "expo-linear-gradient": "~9.1.0",
+    "expo-linking": "~2.2.3",
+    "expo-splash-screen": "~0.10.2",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-animatable": "^1.3.3",
     "react-native-fs": "^2.18.0",
-    "react-native-gesture-handler": "~1.8.0",
     "react-native-paper": "^4.7.2",
     "react-native-qrcode-svg": "^6.1.1",
-    "react-native-reanimated": "~1.13.0",
-    "react-native-safe-area-context": "3.1.9",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
-    "expo-linear-gradient": "~9.1.0",
-    "expo-splash-screen": "~0.10.2"
+    "react-native-reanimated": "~2.1.0",
+    "react-native-gesture-handler": "~1.10.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
