--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-native-reanimated": "~2.1.0",
-    "react-native-gesture-handler": "~1.10.2"
+    "react-native-gesture-handler": "~1.10.2",
+    "expo-permissions": "~12.0.1",
+    "expo-constants": "~10.1.3",
+    "expo-camera": "~11.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
